estilo pr abrir pimeiro cartao

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <div class="pokedex">
         <div class="cartoes-pokemon">
-          <div class="cartao-pokemon">
+          <div class="cartao-pokemon tipo-raio aberto">
             <div class="cartao-topo">
               <div class="detalhes">
                 <h2 class="nome">Pikachu</h2>
